--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="nav-bar-drop-down" id="nav-bar-drop-down" hidden>
         <a class="nav-bar-drop-down-menu-item" href="Max_Intro.html">Max Intro</a>
         <a class="nav-bar-drop-down-menu-item" href="Chordophone.html">Chordophone</a>
-        <a class="nav-bar-drop-down-menu-item nav-bar-drop-down-menu-item-active" href="DiatonicPads.html">DiatonicPads</a>
+        <a class="nav-bar-drop-down-menu-item" href="DiatonicPads.html">DiatonicPads</a>
         <a class="nav-bar-drop-down-menu-item" href="LiveClip.html">LiveClip</a>
     </div>
     <script>
