--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -16,13 +16,13 @@
                     <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+                    <a class="nav-bar-list-link" href="Max_Intro.html">Max Intro</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
                 </li>
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
+                    <a class="nav-bar-list-link nav-bar-active" href="DiatonicPads.html">DiatonicPads</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
