--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
             </li>
             <li class="nav-bar-list-item">
-                <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+                <a class="nav-bar-list-link" href="Max_Intro.html">Max Intro</a>
             </li>
             <li class="nav-bar-list-item">
                 <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
@@ -56,14 +56,12 @@
         }
     </script>
 
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb bg-white bread-crumb-font-size">
-            <li class="breadcrumb-item active bread-crumb-font-size" aria-current="page">Home</li>
-        </ol>
-    </nav>
     <div class="home">
-        <div class="Home-Section-Container text-center" name="Home-Section-MaxExternals" hidden>
-            <h4>MaxExternals</h4>
+        <div class="project-title text-center">
+            <h1 class="display-4 text-center">Projects</h1>
+        </div>
+        <div class="Home-Section-Container text-center"  name="Home-Section-MaxExternals" hidden>
+                <h4>MaxExternals</h4>
             <!-- TODO: Image -->
             <p>
                 A suite of Max/MSP externals (Max/MSP objects that extend the Max/MSP 
