--- a/index.html
+++ b/index.html
@@ -44,17 +44,6 @@
         <a class="nav-bar-drop-down-menu-item" href="DiatonicPads.html">DiatonicPads</a>
         <a class="nav-bar-drop-down-menu-item" href="LiveClip.html">LiveClip</a>
     </div>
-    <script>
-        var listContainer = document.getElementById("list-container");
-        var buttonContainer = document.getElementById("button-container");
-        if(window.screen.availWidth < 600){
-            console.log("show button container")
-            listContainer.hidden = "true";
-        } else {
-            console.log("show list container")
-            buttonContainer.hidden="true";
-        }
-    </script>
 
     <div class="home">
         <div class="project-title text-center">
@@ -109,5 +98,6 @@
             </p>
         </div>
     </div>
-    <script src="resize.js"></script>
+    <script src="resizeNavbar.js"></script>
+    <script src="navbarToggle.js"></script>
 </body>
