--- a/ProjectIndex.html
+++ b/ProjectIndex.html
@@ -40,43 +40,56 @@
                 <a class="nav-bar-drop-down-menu-item" href="BlogIndex.html">DIY Blog</a>
             </div>
         </div>
-        <div class="project">
-            <div class="project-title">
-                <h1 class="display-4 text-center">Chordophone</h1>
+        <div class="home">
+            <div class="project-title text-center">
+                <h1 class="display-4 text-center">Projects</h1>
             </div>
-            <div class="project-description tutorial-text-size">
-                <div class="my-3">
-                    <img src="./images/Chordophone/chordophone.png" class="home-card-image img-fluid d-block mx-auto">
-                </div>
+            <div class="Home-Section-Container text-center"  name="Home-Section-MaxExternals" hidden>
+                    <h4>MaxExternals</h4>
+                <!-- TODO: Image -->
                 <p>
-                    This patch is to be used with a Grid controller, specifically one with 128 buttons oriented horizontally.
+                    A suite of Max/MSP externals (Max/MSP objects that extend the Max/MSP 
+                    programming language)
                 </p>
+            </div>
+            <div class="Home-Section-Container text-center" name="Home-Section-MaxIntro">
+                <h4>MaxIntro</h4>
+                <a href="Max_Intro.html">
+                    <img src="./images/Max/max_intro.png"
+                    class="home-card-image img-fluid d-block mx-auto"> 
+                </a>
                 <p>
-                    A chordophone is in the simplest sense, a stringed instrument. Guitars, zithers, harps, lutes, etc. are all examples
-                    of chordophones. This patch aspires to provide a similar feel to using a dulcimer and an autoharp, but maybe lands
-                    somewhere closer to a chord organ.
+                    A brief intro on the Max/MSP programming environment
                 </p>
-                <div class="my-3">
-                    <img src="./images/Chordophone/grid.png" class="home-card-image img-fluid d-block mx-auto">
-                </div>
+            </div>
+            <div class="Home-Section-Container text-center" name="Home-Section-DiatonicPads">
+                <h4>DiatonicPads</h4>
+                <a href="DiatonicPads.html">
+                    <img src="./images/DiatonicPads/Diatonic-pads.png" 
+                    class="home-card-image img-fluid d-block mx-auto">
+                </a>
                 <p>
-                    The top row provides global functionality and tunes the two instruments to a note (buttons [0 0]-[11 0] A-G#) and
-                    either the Ionian, Aeolian, or Dorian mode (buttons [12 0]-[14 0]). 
+                    A Max/MSP project to extend a 4x4 pad controller
                 </p>
+            </div>
+            <div class="Home-Section-Container text-center" name="Home-Section-Chordophone">
+                <h4>Chordophone</h4>
+                <a href="Chordophone.html">
+                    <img src="./images/Chordophone/chordophone.png" 
+                    class="home-card-image img-fluid d-block mx-auto">
+                </a>
                 <p>
-                    The instrument will also allow you to switch
-                    between two selected modes by toggling button [15 0]. This will give you the flexibility to change keys on the fly
-                    during a performance.
+                    A Max/MSP project for the Monome Grid
                 </p>
+            </div>
+            <div class="Home-Section-Container text-center" name="Home-Section-LiveClip">
+                <h4>LiveClip</h4>
+                <a href="LiveClip.html">
+                    <img src="./images/LiveClip/liveclip.png"
+                    class="home-card-image img-fluid d-block mx-auto">
+                </a>
                 <p>
-                    The left half of the bottom seven rows will trigger triads. The right half of the bottom seven rows will trigger individual notes.
-                    Up one row is up an octave, over one column is up a scale degree.
-                </p>
-                <p>
-                    The repo for chordophone can be found here: <a href="https://github.com/SitStayCreate/Chordophone">https://github.com/SitStayCreate/Chordophone</a>.
-                </p>
-                <p>
-                    Special thanks to Derek Cohen for his guidance on this project.
+                    A Max4Live project for the Monome Grid
                 </p>
             </div>
         </div>
